--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!------------------------------>
     <!-- Stuff for body goes here -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid bg-warning">
+    <div class="container-fluid bg-success">
         <a class="navbar-brand" href="#">
             <img src="./images/logo.jpg" height="36"> 
             Adnan's Hiking app
@@ -78,7 +78,7 @@
         <h1 class="display-5 fw-bold">Welcome to Adnan's Hikes!</h1>
         <p class="col-md-8 fs-4">Let's start the adventure now</p>
 
-        <button class="btn btn-warning btn-lg" type="button">Login/Signup</button>
+        <button class="btn btn-success btn-lg" type="button">Login/Signup</button>
 
         <!-- Add an onclick attribute to define click event handler -->
         <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
